clusters/pi/apps/pi-hole.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
---
# NOTE: Create the password secret manually for security:
# kubectl create secret generic pihole-admin-password \
#   --from-literal=password='YourSecurePasswordHere' \
#   --namespace=pihole
