clusters/pi/apps/vpn-only-middleware.yaml
# Shared middleware for VPN-only access
# Referenced by IngressRoutes in other namespaces
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vpn-only
  namespace: default
spec:
  ipAllowList:
    sourceRange:
      # WireGuard VPN subnet
      - 10.8.0.0/24
      # Local home network
      - 192.168.1.0/24
