clusters/pi/apps/pi-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-local-network-only@kubernetescrd
spec:
  tls:
  - hosts:
    - grafana.ulyssetassidis.fr
    secretName: grafana-tls
  rules:
  - host: grafana.ulyssetassidis.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
